# megumi

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: test.yml
megumi/: config.py  logger.py  scheduler.py  version.py
megumi/cli/: __main__.py  daemon.py  entry.py  graphql_client.py  job.py
megumi/db/: __init__.py  dao.py  db.py
megumi/downloader_connector/: __init__.py  abc.py  aria2c.py
megumi/hook/: abc.py
megumi/http_api/: server.py
megumi/http_api/graphql/: __init__.py  mutation.py  query.py
megumi/rss/: rss.py
megumi/task/: manager.py
megumi/utils/: __init__.py  utils.py
tests/: test_db.py  test_graphql.py  test_graphql_cli_client.py  test_rpc_aria2c.py  test_rss.py  test_task_dao.py
tests/assests/: config_test_api_key.toml  test.xml
tests/utils/: mock_server.py
